--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,14 @@
   <body>
     <div>
       <div class="item">
+        <% if current_user %>
+          <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+        <% else %>
+          <%= link_to "Login", new_user_session_path %>
+          <%= link_to "Register", new_user_registration_path %>
+        <% end %>
+      </div>
+      <div class="item">
         <%= link_to "Blogs", blogs_path %>
       </div>
       <div class="item">
@@ -14,6 +22,9 @@
       </div>
     </div>
     <div class="clearfix">
+      <div>
+        <%= render "shared/flash" %>
+      </div>
     </div>
     <%= yield %>
   </body>
