add session tracker for source

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,5 +27,11 @@
       </div>
     </div>
     <%= yield %>
+
+    <div>
+      <% if session[:source] %>
+        Thank for visiting <%= session[:source] %>
+      <% end %>
+    </div>
   </body>
 </html>
