--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Resume</title>
+    <title><%= generate_title(yield :title) %></title>
     <%= render 'layouts/import' %>
   </head>
   <body>
@@ -15,10 +15,19 @@
         <% end %>
       </div>
       <div class="item">
-        <%= link_to "Blogs", blogs_path %>
+        <%= link_to "Blog", blogs_path %>
       </div>
       <div class="item">
         <%= link_to "Portfolio", portfolios_path %>
+      </div>
+      <div class="item">
+        <%= link_to "About", about_path %>
+      </div>
+      <div class="item">
+        <%= link_to "Contact", contact_path %>
+      </div>
+      <div class="item">
+        <%= link_to "Home", root_path %>
       </div>
     </div>
     <div class="clearfix">
