--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -7,40 +7,13 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    <div id="header">
-      <div class="item">
-        <% if current_user.is_a? User %>
-          <%= link_to "Logout", destroy_user_session_path, method: :delete %>
-        <% else %>
-          <%= link_to "Login", new_user_session_path %>
-          <%= link_to "Register", new_user_registration_path %>
-        <% end %>
-      </div>
-      <div class="navigation">
-        <div class="item">
-          <%= link_to "Blog", blogs_path %>
-        </div>
-        <div class="item">
-          <%= link_to "Portfolio", portfolios_path %>
-        </div>
-        <div class="item">
-          <%= link_to "About", about_path %>
-        </div>
-        <div class="item">
-          <%= link_to "Contact", contact_path %>
-        </div>
-        <div class="item">
-          <%= link_to "Home", root_path %>
-        </div>
-      </div>
-    </div>
+    <%= render "layouts/nav" %>
     <div class="clearfix">
       <div>
         <%= render "shared/flash" %>
       </div>
     </div>
     <%= yield %>
-
     <div>
       <% if session[:source] %>
         Thank for visiting <%= session[:source] %>
