--- a/app/assets/stylesheets/blog.scss
+++ b/app/assets/stylesheets/blog.scss
@@ -7,3 +7,12 @@
 .clearfix {
   clear: both;
 }
+
+.blog-title {
+  font-weight: bold;
+  color: green;
+}
+
+.blog-created-time {
+  font-style: italic;
+}
