--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,2 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<h1>Information contact</h1>
+<div><%= number_to_phone 1687491748, country_code: 84 %></div>
