--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Portfolioes</h1>
+<h1>Portfolios</h1>
 
-<%= render @portfolios %>
+<%= render partial: "portfolio_item", collection: @portfolio_items %>
 <%= link_to "New portfolio", new_portfolio_path %>
 
