--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,5 +13,8 @@
     </div>
     <%= yield %>
     <%= source_helper %>
+    <div class="footer">
+      <%= copyright "Le Chi Nguyen", "All rights reserved." %>
+    </div>
   </body>
 </html>
