authorization for portfotio and blog

--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -6,6 +6,9 @@
     <% end %>
   ]
   <%= link_to "Show", show_portfolio_path(portfolio_item) %>
-  <%= link_to "Edit", edit_portfolio_path(portfolio_item) %>
-  <%= link_to "Delete", portfolio_path(portfolio_item), method: :delete %>
+
+  <% if logged_in?(:admin) %>
+    <%= link_to "Edit", edit_portfolio_path(portfolio_item) %>
+    <%= link_to "Delete", portfolio_path(portfolio_item), method: :delete %>
+  <% end %>
 </div>
