--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,15 +1,12 @@
 <% provide :title, @blog.title %>
-<p id="notice"><%= notice %></p>
-
 <p>
   <strong>Title:</strong>
   <%= @blog.title %>
 </p>
-
 <p>
   <strong>Body:</strong>
   <%= @blog.body %>
 </p>
 
-<%= link_to 'Edit', edit_blog_path(@blog) %> |
+<%= link_to 'Edit', edit_blog_path(@blog) if logged_in?(:admin) %> |
 <%= link_to 'Back', blogs_path %>
