--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Portfolios</h1>
 
 <%= render partial: "portfolio_item", collection: @portfolio_items %>
-<%= link_to "New portfolio", new_portfolio_path %>
+<%= link_to "New portfolio", new_portfolio_path if logged_in?(:admin) %>
 
