--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,3 +1,9 @@
-<% flash.each do |type, message| %>
-  <%= content_tag :div, message, class: "alert alert-#{type} hide-flash" %>
+<% [:notice, :error, :alert, :success].each do |level| %>
+  <% unless flash[level].blank? %>
+    <div id="flash-message" class="alert <%= flash_type level %>">
+      <a class="close" data-dismiss="alert" href="#" aria-hidden="true">&times;</a>
+      <%= sanitize flash[level] %>
+    </div>
+  <% end %>
 <% end %>
+
