interface for application layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title><%= generate_title(yield :title) %></title>
     <%= render 'layouts/import' %>
   </head>
   <body>
-    <%= render "layouts/nav" %>
-    <div class="clearfix">
-      <div>
+    <div class="text-center">
+      <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+        <header class="masthead mb-auto">
+          <div class="inner">
+            <h3 class="masthead-brand">John Harvey</h3>
+            <nav class="nav nav-masthead justify-content-center">
+              <%= link_to "Home", root_path, class: "nav-link active" %>
+              <%= link_to "Portfolio", portfolios_path, class: "nav-link" %>
+              <%= link_to "Blog", blogs_path, class: "nav-link" %>
+              <%= link_to "Contact", contact_path, class: "nav-link" %>
+              <%= link_to "About", about_path, class: "nav-link" %>
+              <%= user_log_status "nav-link" %>
+            </nav>
+          </div>
+        </header>
         <%= render "shared/flash" %>
+        <%= yield %>
+        <%= source_helper %>
+        <footer class="mastfoot mt-auto">
+          <div class="inner">
+            <p><%= copyright "Lê Chí Nguyên", "All rights reserved" %></p>
+          </div>
+        </footer>
       </div>
-    </div>
-    <%= yield %>
-    <%= source_helper %>
-    <div class="footer">
-      <%= copyright "Le Chi Nguyen", "All rights reserved." %>
     </div>
   </body>
 </html>
