--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,10 +1,4 @@
+/*
+ *= require home
+ */
 @import "bootstrap";
-
-.item {
-  float: right;
-  margin-left: 50px;
-}
-
-.clearfix {
-  clear: both;
-}
