--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,3 @@
-<h1>Information contact</h1>
-<div><%= number_to_phone 1687491748, country_code: 84 %></div>
+<main role="main" class="inner cover">
+<p>Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+</main>
