--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,3 +1,8 @@
 <main role="main" class="inner cover">
-<p>Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+  <h3>My location on Google Map</h3>
+<p></p>  <div id="map">
+  </div>
 </main>
+
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMin6dLwRHZydK1h5GWwpzTCKEn8Kx3Nc&callback=initMap">
+</script>
