--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,8 +1,6 @@
-<main role="main" class="inner cover">
-  <h3>My location on Google Map</h3>
-<p></p>  <div id="map">
-  </div>
-</main>
+<% provide :title, "Contact" %>
+<h3>My location on Google Map</h3>
+<div id="map"></div>
 
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMin6dLwRHZydK1h5GWwpzTCKEn8Kx3Nc&callback=initMap">
 </script>
