--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,9 @@
           </div>
         </header>
         <%= render "shared/flash" %>
-        <%= yield %>
+        <main role="main" class="inner cover">
+          <%= yield %>
+        </main>
         <%= source_helper %>
         <footer class="mastfoot mt-auto">
           <div class="inner">
