--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -37,7 +37,7 @@
             </div>
 
             <div class="form-group">
-              <%= f.submit "Update", class: "btn btn-primary" %>
+              <%= f.submit "Update", class: "btn btn-primary btn-block" %>
             </div>
           <% end %>
         </div>
@@ -48,8 +48,8 @@
         <div class="col-md-4">
           <h5>Delete account</h5>
           <label>Unhappy?</label>
-          <%= button_to "Delete account", registration_path(resource_name), method: :delete,
-            class: "btn btn-danger" %>
+          <%= button_to "Delete account", registration_path(resource_name),
+            method: :delete, class: "btn btn-danger btn-block" %>
           <%= link_to "Back", :back %>
         </div>
       </div>
