--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,6 +1,5 @@
 <% provide :title, "Updating blog" %>
-<h1>Editing Blog</h1>
-
-<%= render 'form', blog: @blog %>
-<%= link_to 'Show', @blog %> |
-<%= link_to 'Back', blogs_path %>
+<div class="col-md-8 blog-main">
+  <h2 class="blog-post-title">Edit post</h2>
+  <%= render "form", blog: @blog %>
+</div>
