--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -102,29 +102,13 @@
           </div>
 
           <div class="p-3">
-            <h4 class="font-italic">Archives</h4>
-            <ol class="list-unstyled mb-0">
-              <li><a href="#">March 2014</a></li>
-              <li><a href="#">February 2014</a></li>
-              <li><a href="#">January 2014</a></li>
-              <li><a href="#">December 2013</a></li>
-              <li><a href="#">November 2013</a></li>
-              <li><a href="#">October 2013</a></li>
-              <li><a href="#">September 2013</a></li>
-              <li><a href="#">August 2013</a></li>
-              <li><a href="#">July 2013</a></li>
-              <li><a href="#">June 2013</a></li>
-              <li><a href="#">May 2013</a></li>
-              <li><a href="#">April 2013</a></li>
-            </ol>
-          </div>
-
-          <div class="p-3">
             <h4 class="font-italic">Elsewhere</h4>
-            <ol class="list-unstyled">
-              <li><a href="#">GitHub</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">Facebook</a></li>
+            <ol class="list-unstyled social-links">
+              <li><%= fa_icon "github" %><a href="#" class="align-top">GitHub</a></li>
+              <li><%= fa_icon "facebook" %><a href="#" class="align-top">Twitter</a></li>
+              <li><%= fa_icon "twitter" %><a href="#" class="align-top">Facebook</a></li>
+              <li><%= fa_icon "instagram" %><a href="#" class="align-top">Instagram</a></li>
+              <li><%= fa_icon "snapchat" %><a href="#" class="align-top">Snapchat</a></li>
             </ol>
           </div>
         </aside><!-- /.blog-sidebar -->
@@ -137,7 +121,7 @@
     <footer class="blog-footer">
       <p><%= copyright "Lê Chí Nguyên", "All rights reserved" %></p>
       <p>
-        <a href="#">Back to top</a>
+        <a href="#" id="back-to-top">Back to top</a>
       </p>
     </footer>
   </body>
