--- a/app/assets/stylesheets/blog.scss
+++ b/app/assets/stylesheets/blog.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "font-awesome";
 
 .blog-header {
   line-height: 1;
@@ -138,4 +139,27 @@ h1, h2, h3, h4, h5, h6 {
 
 .blog-in {
   margin-left: 10px;
+}
+
+.blog-post-title a {
+  text-decoration: none;
+  color: inherit;
+  &:hover {
+    color: red;
+  }
+}
+
+.social-links li {
+  height: 2em;
+  line-height: 2em;
+  margin-top: 1em;
+  i {
+    display: inline-block;
+    margin-right: 10px;
+    font-size: 2em;
+    width: 1em;
+  }
+  a.social-link {
+    display: inline-block;
+  }
 }
