front end for blogs, portfolio, authentication

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -119,8 +119,21 @@ footer.mastfoot.mt-auto {
 }
 
 /*
- * Contact location
+ * Custom styles
  */
+
+a.nav-link {
+  margin-left: 30px;
+}
+
+.authen-area {
+  margin-left: 4em;
+}
+
+a.btn.btn-sm.btn-outline-secondary.blog-in {
+  margin-right: 10px;
+  color: #fff;
+}
 
 #map {
   height: 400px;
