--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title><%= generate_title(yield :title) %></title>
+    <%= favicon_link_tag "favicon.ico" %>
     <%= render 'layouts/import' %>
   </head>
   <body>
