--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -6,8 +6,8 @@
       <p class="card-text"><%= portfolio_item.subtitle.capitalize %></p>
       <div class="d-flex justify-content-between align-items-center">
         <div class="btn-group">
-          <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-          <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+          <%= link_to "View", show_portfolio_path(portfolio_item), class: "btn btn-sm btn-outline-secondary" %>
+          <%= link_to "Edit", edit_portfolio_path(portfolio_item), class: "btn btn-sm btn-outline-secondary" %>
         </div>
         <small class="text-muted">9 mins</small>
       </div>
