--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,3 +1,3 @@
-<div class="row">
+<div class="row <%= 'sortable' if logged_in?(:admin) %>">
   <%= render partial: "portfolio_item", collection: @portfolio_items %>
 </div>
