Add profile about image

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -145,3 +145,7 @@ a.btn.btn-sm.btn-outline-secondary.blog-in {
   padding-top: 5em;
   color: #000;
 }
+
+.col-md-8.text-intro {
+  padding-left: 4em;
+}
