--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,10 @@
 <% provide :title, "About me" %>
-<div>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15334.315237024764!2d108.14879645!3d16.08733195!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x314218c98a5e5ee7%3A0x6f9d3e91100df300!2zODUgUGhhbiBWxINuIMSQ4buLbmgsIEjDsmEgS2jDoW5oIELhuq9jLCBMacOqbiBDaGnhu4N1LCDEkMOgIE7hurVuZywgVmlldG5hbQ!5e0!3m2!1sen!2s!4v1521610137968" width="800" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+<div class="row about-me">
+  <div class="col-md-4">
+    <%= image_tag "avatar.jpg", width: 300 %>
+  </div>
+  <div class="col-md-8 text-intro">
+    <p class="text-justify">Welcome to my new blog, My Programming Adventure.  I am .NET developer by day who has recently been drawn back into the open source world.  In my time away from the Linux/Unix world there has been a HUGE explosion in solid tooling and languages available for free.  Literally, anything you need you can find for free and more than likely the free ‘stuff’ will be better than anything you can pay for to do the same job.</p>
+    <p class="text-justify">In the next few days I will have a book review on The Little Book on CoffeeScript.   Now that I’ve introduced myself its time for me to go and work on my book review!  Come back and let me know what you think.</p>
+  </div>
 </div>
