global image background

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,10 @@
   </head>
   <body>
     <div>
+      <div id="background"></div>
       <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
         <header class="masthead mb-auto">
+
           <div class="inner">
             <h3 class="masthead-brand">John Harvey</h3>
             <nav class="nav nav-masthead justify-content-center home-nav">
