--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -21,7 +21,6 @@ a:hover {
 
 html,
 body {
-  background-color: #495057 !important;
 }
 
 body {
@@ -148,4 +147,18 @@ a.btn.btn-sm.btn-outline-secondary.blog-in {
 
 .col-md-8.text-intro {
   padding-left: 4em;
+}
+
+#background {
+  position: fixed;
+  left: 100%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translateX(-50%) translate(-50%); // Same
+  background: image-url('background.jpg') no-repeat;
+  background-size: cover;
 }
