--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="col-md-4">
   <%= form_for portfolio do |form| %>
     <% if portfolio.errors.any? %>
       <div id="error_explanation">
@@ -12,34 +12,44 @@
       </div>
     <% end %>
 
-    <div class="field">
+    <div class="form-group">
       <%= form.label :title %>
-      <%= form.text_field :title %>
+      <%= form.text_field :title, class: "form-control" %>
     </div>
 
-    <div class="field">
+    <div class="form-group">
       <%= form.label :subtitle %>
-      <%= form.text_field :subtitle %>
+      <%= form.text_field :subtitle, class: "form-control" %>
     </div>
 
-    <div class="field">
+    <div class="form-group">
+      <%= form.label :main_image %>
+      <%= form.file_field :main_image, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :thumb_image %>
+      <%= form.file_field :thumb_image, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
       <%= form.label :body %>
-      <%= form.text_area :body %>
+      <%= form.text_area :body, class: "form-control", rows: 10 %>
     </div>
 
-    <div class="field">
+    <div class="form-group">
       <ul>
         <%= form.fields_for :technologies do |technology_form| %>
           <li>
             <%= technology_form.label :name %>
-            <%= technology_form.text_field :name %>
+            <%= technology_form.text_field :name, class: "form-control" %>
           </li>
         <% end %>
       </ul>
     </div>
 
-    <div class="actions">
-      <%= form.submit %>
+    <div class="form-group">
+      <%= form.submit "Create", class: "btn btn-primary" %>
     </div>
   <% end %>
 </div>
