--- a/app/views/portfolios/new.html.erb
+++ b/app/views/portfolios/new.html.erb
@@ -1,2 +1,3 @@
-<h1>New portfolio</h1>
-<%= render "form", portfolio: @portfolio %>
+<div class="row">
+  <%= render "form", portfolio: @portfolio %>
+</div>
