--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -23,13 +23,15 @@
     </div>
 
     <div class="form-group">
-      <%= form.label :main_image %>
-      <%= form.file_field :main_image, class: "form-control" %>
+      <label class="btn btn-secondary">Upload main image
+        <%= form.file_field :main_image, class: "image-upload" %>
+      </label>
     </div>
 
     <div class="form-group">
-      <%= form.label :thumb_image %>
-      <%= form.file_field :thumb_image, class: "form-control" %>
+      <label class="btn btn-secondary">Upload thumb image
+        <%= form.file_field :thumb_image, class: "image-upload" %>
+      </label>
     </div>
 
     <div class="form-group">
