--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -40,16 +40,13 @@
     </div>
 
     <div class="form-group">
-      <ul>
-        <%= form.fields_for :technologies do |technology_form| %>
-          <li>
-            <%= technology_form.label :name %>
-            <%= technology_form.text_field :name, class: "form-control" %>
-          </li>
-        <% end %>
-      </ul>
+      <%= form.fields_for :technologies do |technology_form| %>
+        <%= render "technology_fields", f: technology_form %>
+      <% end %>
     </div>
-
+    <div>
+      <%= link_to_add_association "Add", form, :technologies %>
+    </div>
     <div class="form-group">
       <%= form.submit "Create", class: "btn btn-primary" %>
     </div>
