--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,7 @@
             <p><%= copyright "Lê Chí Nguyên", "All rights reserved" %></p>
           </div>
         </footer>
+        <%= render "shared/alert" %>
       </div>
     </div>
   </body>
