--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,6 +1,8 @@
 <% provide :title, "Contact" %>
-<h3>My location on Google Map</h3>
-<div id="map"></div>
+<div>
+  <h3>My location on Google Map</h3>
+  <div id="map"></div>
 
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMin6dLwRHZydK1h5GWwpzTCKEn8Kx3Nc&callback=initMap">
-</script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMin6dLwRHZydK1h5GWwpzTCKEn8Kx3Nc&callback=initMap">
+  </script>
+</div>
