--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= render 'layouts/import' %>
   </head>
   <body>
-    <div>
+    <div class="container-fluid">
       <% if false %>
         <div id="image-background"></div>
       <% end %>
@@ -18,7 +18,7 @@
         <header class="masthead mb-auto">
 
           <div class="inner">
-            <h3 class="masthead-brand">John Harvey</h3>
+            <h2 class="masthead-brand">John Harvey</h2>
             <nav class="nav nav-masthead justify-content-center home-nav">
               <%= nav_generate "nav-link home-nav-item", :span %>
               <div class="authen-area">
@@ -32,7 +32,7 @@
         <main role="main" class="inner cover">
           <%= yield %>
         </main>
-        <%= source_helper %>
+
         <footer class="mastfoot mt-auto">
           <div class="inner">
             <p><%= copyright "Lê Chí Nguyên", "All rights reserved" %></p>
