--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <header class="masthead mb-auto">
 
           <div class="inner">
-            <h2 class="masthead-brand">John Harvey</h2>
+            <h2 class="masthead-brand">NGUYEN T-Rex</h2>
             <nav class="nav nav-masthead justify-content-center home-nav">
               <%= nav_generate "nav-link home-nav-item", :span %>
               <div class="authen-area">
