--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,8 @@
 <% provide :title, "Home" %>
+
 <div class="text-center">
   <h1 class="cover-heading">Cover your page.</h1>
-  <p class="lead">Welcome to my new blog, My Programming Adventure.  I am .NET developer by day who has recently been drawn back into the open source world.  In my time away from the Linux/Unix world there has been a HUGE explosion in solid tooling and languages available for free.  Literally, anything you need you can find for free and more than likely the free ‘stuff’ will be better than anything you can pay for to do the same job.</p>
+  <p class="lead">Welcome to my blog, my programming adventure.  I am a web application developer by day who has recently been drawn back into the open source world.  In my time away from the Linux/Unix world there has been a HUGE explosion in solid tooling and languages available for free.  Literally, anything you need you can find for free and more than likely the free ‘stuff’ will be better than anything you can pay for to do the same job.</p>
   <p class="lead text-center">
     <%= link_to "Learn more", about_path, class: "btn btn-lg btn-secondary" %>
   </p>
